--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -91,18 +91,18 @@
             <article class="contenedor-cuadrito">
 
                 <img class="contenedor-img-cuadrito" src="img/5.png" alt="nivel 1">
-              
-                    <div>
-                        <p class="precio-">$15000.-</p>
-                    </div>
 
-                    <div class="contenedor-informacion-cuadrito">
-                        <h5>Peluqueria Canina Nivel 1</p>
-                            <h6>duracion=16hs</h6>
-                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+                <div>
+                    <p class="precio-">$15000.-</p>
+                </div>
 
-                    </div>
-               
+                <div class="contenedor-informacion-cuadrito">
+                    <h5>Peluqueria Canina Nivel 1</p>
+                        <h6>duracion=16hs</h6>
+                        <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                </div>
+
             </article>
 
             <!--curso 2-->
@@ -191,25 +191,24 @@
 
 
         <!--medios de pago-->
-        <section class="medios-de-pago">
-            <h2 class="tex-curso-">Medios De Pago</h2>
-            <article class="contenedor-tarjetas"></article>
-            <div class="derecha">
-                <img src="img/izqu.svg" alt="">
-            </div>
-            <div class="tarjetero">
-                <img src="../img/izqu.svg" alt="">
-                <img src="../img/visa.png" alt="">
-                <img src="../img/paypal.png" alt="">
-                <img src="../img/mercado.png" alt="">
-                <img src="../img/mastercard.png" alt="">
-                <img src="../img/derec.svg" alt="">
-            </div>
-            <div img class="izquierda">
-                < src="img/derec.svg" alt="">
+        <section >
+            <div class="medios-de-pago" >
+                <h2 class="tex-curso-">Medios De Pago</h2>
             </div>
 
-            </article>
+
+
+            <div class="slider">
+
+                <img class="medios-pago" src="../img/visa.png" alt="">
+                <img class="medios-pago" src="../img/paypal.png" alt="">
+                <img class="medios-pago" src="../img/mercado.png" alt="">
+                <img class="medios-pago" src="../img/mastercard.png" alt="">
+
+            </div>
+
+
+
 
         </section>
 
