--- a/giftCard.html
+++ b/giftCard.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos Estetica Canina</title>
-    <link rel="stylesheet" href="css/estilo-index.css">
+
+    <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/estilo-compuesto.css">
+
 </head>
 
 <body>
