--- a/calendario.html
+++ b/calendario.html
@@ -8,6 +8,11 @@
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/estilo-compuesto.css">
+    <link href='fullcalendar/core/main.css' rel='stylesheet' />
+    <link href='fullcalendar/daygrid/main.css' rel='stylesheet' />
+    <script src='fullcalendar/core/main.js'></script>
+    <script src='fullcalendar/daygrid/main.js'></script>
+    <script src="js/calendario.js"></script>
 </head>
 
 <body>
@@ -43,9 +48,11 @@
     </nav>
 
     <main>
-
+        <section class="contenedor-calendario">
+            <article id="calendario"></article>
+        </section>
+        
     </main>
-
 
     <!-- ultima linea datos del grupo-->
     <footer>
