acomodando el foter

--- a/curso.html
+++ b/curso.html
@@ -163,19 +163,23 @@
     <!-- ultima linea datos del grupo-->
     <footer>
         <section>
-            <article class="info-grupo">
-                <div  class="datos">
-                    <p>Datos de grupo</p>
+            <article class="footerrrr">
+                <div class="datos">
+                    <p>Alumno:</p>
+                    <p>Ocampo Jimena Antonella</p>
+                    <p>DNI:40886574</p>
                 </div>
                 <div class="datos">
                     <p>Menu inferior</p>
                 </div>
                 <div class="datos">
-                    <p>Redes</p>
+                    <p>Instagram:</p>
+                    <p>Youtube:</p>
 
                 </div>
             </article>
         </section>
+
 
 
     </footer>
