--- a/formulario.html
+++ b/formulario.html
@@ -73,19 +73,21 @@
         </section>
     </main>
 
-
     <!-- ultima linea datos del grupo-->
     <footer>
         <section>
-            <article class="info-grupo">
+            <article class="footerrrr">
                 <div class="datos">
-                    <p>Datos de grupo</p>
+                    <p>Alumno:</p>
+                    <p>Ocampo Jimena Antonella</p>
+                    <p>DNI:40886574</p>
                 </div>
                 <div class="datos">
                     <p>Menu inferior</p>
                 </div>
                 <div class="datos">
-                    <p>Redes</p>
+                    <p>Instagram:</p>
+                    <p>Youtube:</p>
 
                 </div>
             </article>
