--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -84,103 +84,107 @@
 
         <h2 class="tex-curso">CURSOS DESTACADOS</h2>
 
-        <section class="contenedor-cuadrito-curso">
+        <section>
+
+            <div class="contenedor-cuadrito-curso">
+                <!--curso 1-->
+                <article class="contenedor-cuadrito">
+
+                    <img class="contenedor-img-cuadrito" src="img/5.png" alt="nivel 1">
+
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
+
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Peluqueria Canina Nivel 1</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                    </div>
+
+                </article>
+
+                <!--curso 2-->
+                <article class="contenedor-cuadrito">
+                    <img class="contenedor-img-cuadrito" src="img/6.png" alt="nivel 2">
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
+
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Peluqueria Canina Nivel 2</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                    </div>
+                </article>
+
+                <!--curso 3-->
+                <article class="contenedor-cuadrito">
+                    <img class="contenedor-img-cuadrito" src="img/4.png" alt="nivel 1">
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
+
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Coloracion canina</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                    </div>
+                </article>
+            </div>
+
+            <div class="contenedor-cuadrito-curso">
+                <!--curso 4-->
+                <article class="contenedor-cuadrito">
+                    <img class="contenedor-img-cuadrito" src="img/8.png" alt="nivel 1">
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
+
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Diseño de ropa canina</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                    </div>
+                </article>
+
+                <!--curso 5-->
+                <article class="contenedor-cuadrito">
+                    <img class="contenedor-img-cuadrito" src="img/10.png" alt="nivel 3">
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
+
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Cuidado de patitas</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
+
+                    </div>
+                </article>
 
 
-            <!--curso 1-->
-            <article class="contenedor-cuadrito">
+                <!--curso 6-->
+                <article class="contenedor-cuadrito">
+                    <img class="contenedor-img-cuadrito" src="img/7.png" alt="nivel 3">
+                    <div>
+                        <p class="precio-">$15000.-</p>
+                    </div>
 
-                <img class="contenedor-img-cuadrito" src="img/5.png" alt="nivel 1">
+                    <div class="contenedor-informacion-cuadrito">
+                        <h5 class="hh5">Como bañar perritos</p>
+                            <h6 class="duracion">Duracion=16hs</h6>
+                            <a class="ver-detalle" href="curso.html">ver detalle</a>
 
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Peluqueria Canina Nivel 1</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-
-            </article>
-
-            <!--curso 2-->
-            <article class="contenedor-cuadrito">
-                <img class="contenedor-img-cuadrito" src="img/6.png" alt="nivel 2">
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Peluqueria Canina Nivel 2</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-            </article>
-
-            <!--curso 3-->
-            <article class="contenedor-cuadrito">
-                <img class="contenedor-img-cuadrito" src="img/4.png" alt="nivel 1">
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Coloracion canina</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-            </article>
-
-            <!--curso 4-->
-            <article class="contenedor-cuadrito">
-                <img class="contenedor-img-cuadrito" src="img/8.png" alt="nivel 1">
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Diseño de ropa canina</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-            </article>
-
-            <!--curso 5-->
-            <article class="contenedor-cuadrito">
-                <img class="contenedor-img-cuadrito" src="img/10.png" alt="nivel 3">
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Cuidado de papitas</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-            </article>
+                    </div>
+                </article>
 
 
-            <!--curso 6-->
-            <article class="contenedor-cuadrito">
-                <img class="contenedor-img-cuadrito" src="img/7.png" alt="nivel 3">
-                <div>
-                    <p class="precio-">$15000.-</p>
-                </div>
-
-                <div class="contenedor-informacion-cuadrito">
-                    <h5>Como bañar perritos</p>
-                        <h6>duracion=16hs</h6>
-                        <a class="ver-detalle" href="curso.html">ver detalle</a>
-
-                </div>
-            </article>
-
+            </div>
 
 
         </section>
@@ -191,8 +195,8 @@
 
 
         <!--medios de pago-->
-        <section >
-            <div class="medios-de-pago" >
+        <section>
+            <div class="medios-de-pago">
                 <h2 class="tex-curso-">Medios De Pago</h2>
             </div>
 
@@ -218,15 +222,18 @@
     <!-- ultima linea datos del grupo-->
     <footer>
         <section>
-            <article class="info-grupo">
+            <article class="footerrrr">
                 <div class="datos">
-                    <p>Datos de grupo</p>
+                    <p>Alumno:</p>
+                    <p>Ocampo Jimena Antonella</p>
+                    <p>DNI:40886574</p>
                 </div>
                 <div class="datos">
                     <p>Menu inferior</p>
                 </div>
                 <div class="datos">
-                    <p>Redes</p>
+                    <p>Instagram:</p>
+                    <p>Youtube:</p>
 
                 </div>
             </article>
