--- a/curso.html
+++ b/curso.html
@@ -162,24 +162,23 @@
 
     <!-- ultima linea datos del grupo-->
     <footer>
-        <section>
+        <section class="seccion-foter">
             <article class="footerrrr">
                 <div class="datos">
-                    <p>Alumno:</p>
-                    <p>Ocampo Jimena Antonella</p>
-                    <p>DNI:40886574</p>
+                    <p class="ppp">Alumno:</p>
+                    <p class="ppp">Ocampo Jimena Antonella</p>
+                    <p class="ppp">DNI:40886574</p>
                 </div>
                 <div class="datos">
-                    <p>Menu inferior</p>
+                    <p class="ppp">Menu inferior</p>
                 </div>
                 <div class="datos">
-                    <p>Instagram:</p>
-                    <p>Youtube:</p>
+                    <p class="ppp">Instagram:</p>
+                    <p class="ppp">Youtube:</p>
 
                 </div>
             </article>
         </section>
-
 
 
     </footer>
