--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -19,8 +19,9 @@
     <!--primeralinea logo carro-->
     <header class="contenedor-buscador">
         <article class="contenedor-log-bu-ca">
-            <div>
-                <!--img para un logo--><img class="logotipo" src="img/listo para aprender.png" alt="Logo">
+            <div class="logotipo">
+                <!--img para un logo-->
+                <img class="logotipo" src="img/listo para aprender.png" alt="Logo">
             </div>
             <div class="contenedor-imput">
                 <input class="buscador-list" list="buscador" type="text" placeholder="Buscar">
@@ -41,11 +42,20 @@
     <!--segunda liena redireccion-->
     <nav>
         <ul class="contenedor-lista">
-            <li class="idem"><a href="index-Estetica.html" target="_blank">INICIO</a></li>
-            <li class="idem"><a href="giftCard.html" target="_blank">GIFTCARD</a></li>
-            <li class="idem"><a href="calendario.html" target="_blank">CALENDARIO</a></li>
-            <li class="idem"><a href="formulario.html" target="_blank">FORMULARIO</a></li>
-            <li class="idem"><a href="contacto.html" target="_blank">CONTACTO</a></li>
+            <li class="idem">
+                <a href="index-Estetica.html" target="_blank">INICIO</a>
+            </li>
+            <li class="idem">
+                <a href="giftCard.html" target="_blank">GIFTCARD</a></li>
+            <li class="idem">
+                <a href="calendario.html" target="_blank">CALENDARIO</a>
+            </li>
+            <li class="idem">
+                <a href="formulario.html" target="_blank">FORMULARIO</a>
+            </li>
+            <li class="idem">
+                <a href="contacto.html" target="_blank">CONTACTO</a>
+            </li>
         </ul>
     </nav>
 
@@ -204,10 +214,10 @@
 
             <div class="slider">
 
-                <img class="medios-pago" src="../img/visa.png" alt="">
-                <img class="medios-pago" src="../img/paypal.png" alt="">
-                <img class="medios-pago" src="../img/mercado.png" alt="">
-                <img class="medios-pago" src="../img/mastercard.png" alt="">
+                <img class="medios-pago" src="img/visa.jpg" alt="">
+                <img class="medios-pago" src="img/paypal.jpg" alt="">
+                <img class="medios-pago" src="img/mastercard.jpg" alt="">
+                <img class="medios-pago" src="img/mp.jpg" alt="">
 
             </div>
 
@@ -221,19 +231,19 @@
 
     <!-- ultima linea datos del grupo-->
     <footer>
-        <section>
+        <section class="seccion-foter">
             <article class="footerrrr">
                 <div class="datos">
-                    <p>Alumno:</p>
-                    <p>Ocampo Jimena Antonella</p>
-                    <p>DNI:40886574</p>
+                    <p class="ppp">Alumno:</p>
+                    <p class="ppp">Ocampo Jimena Antonella</p>
+                    <p class="ppp">DNI:40886574</p>
                 </div>
                 <div class="datos">
-                    <p>Menu inferior</p>
+                    <p class="ppp">Menu inferior</p>
                 </div>
                 <div class="datos">
-                    <p>Instagram:</p>
-                    <p>Youtube:</p>
+                    <p class="ppp">Instagram:</p>
+                    <p class="ppp">Youtube:</p>
 
                 </div>
             </article>
