--- a/index-Estetica.html
+++ b/index-Estetica.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--mediaViewport-->
+   <style>
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        </style>
+
     <title>Cursos Estetica Canina</title>
     <link rel="stylesheet" href="css/estilo-todas-las-pag.css">
     <link rel="stylesheet" href="css/estilo-compuesto.css">
@@ -257,13 +265,10 @@
 
     <script>
         $(document).ready(function () {
-            /*$('.slider').slick();*/
             $('.slider').slick({
                 infinite: true,
                 slidesToShow: 3,
                 slidesToScroll: 1,
-                /*autoplay: true,
-                autoplaySpeed: 500,*/
                 dots: true
             });
         });
