alfin pude cambiar el fondo

--- a/giftCard.html
+++ b/giftCard.html
@@ -58,6 +58,8 @@
 
             <article class="vista-previa">
                 <p id="texto"></p>
+                <p id="precio"></p>
+                
             </article>
 
 
@@ -67,9 +69,12 @@
             <form action="">
                 <article class="contenedor2">
 
+
+
+
+
                     <div class="contenedor2">
                         <h4 class="colorr">Personalizacion de la GiftCard</h4>
-
                         <!--nombre del destinatario-->
                         <div class="ppp">
                             <input type="text" id="nombre" name="nombre" placeholder="Nombre Del Destinatario...">
@@ -77,87 +82,96 @@
 
                     </div>
 
+
+
+
                     <div class="contenedor2">
                         <h5 class="colorr">Color</h5>
-
                         <div class="contenedor-de-colores">
 
                             <div class="columna-posicion-ubicacion">
 
                                 <label class="rosa" for="color">.</label>
-                                <input  type="radio" name="text" value="1" checked>
+                                <input type="radio" name="text" value="1" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
 
                                 <label class="negro" for="color">.</label>
-                                <input  type="radio" name="text" value="2" checked>
+                                <input type="radio" name="text" value="2" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
 
                                 <label class="blanco" for="color">.</label>
-                                <input  type="radio" name="text" value="3" checked>
+                                <input type="radio" name="text" value="3" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
 
                                 <label class="azul" for="color">.</label>
-                                <input  type="radio" name="text" value="4" checked>
+                                <input type="radio" name="text" value="4" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
 
                                 <label class="bordo" for="color">.</label>
-                                <input  type="radio" name="text" value="5" checked>
+                                <input type="radio" name="text" value="5" checked>
                             </div>
 
                         </div>
                     </div>
 
+
+
+
+                    
                     <div class="contenedor2">
-
                         <h5 class="colorr">Tamaño de fuente</h5>
-
                         <div class="contenedor-de-tamaño">
                             <div class="columna-posicion-ubicacion">
                                 <p class="tamaño"> 20px</p>
-                                <input  type="radio" name="tamaño" value="1" checked>
+                                <input type="radio" name="tamaño" value="1" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
                                 <p class="tamaño"> 28px</p>
-                                <input  type="radio" name="tamaño" value="2" checked>
+                                <input type="radio" name="tamaño" value="2" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
                                 <p class="tamaño">32px </p>
-                                <input  type="radio" name="tamaño" value="3" checked>
+                                <input type="radio" name="tamaño" value="3" checked>
 
                             </div>
 
                             <div class="columna-posicion-ubicacion">
                                 <p class="tamaño"> 48px</p>
-                                <input  type="radio" name="tamaño" value="4" checked>
+                                <input type="radio" name="tamaño" value="4" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
                                 <p class="tamaño"> 60px</p>
-                                <input  type="radio" name="tamaño" value="5" checked>
+                                <input type="radio" name="tamaño" value="5" checked>
                             </div>
 
                         </div>
                     </div>
 
+
+
+
                     <div class="contenedor2">
-
                         <h5 class="colorr">Monto $ </h5>
-
                         <div class="monto-imput">
 
                             <input type="text" placeholder="¿De cuanto es tu GitfCard?...">
                         </div>
+                    </div>
 
 
+
+
+
+                    <div class="contenedor2">
                         <h5 class="colorr">Ubicación</h5>
-
                         <div class="contenedor-posicion">
 
                             <div class="columna-posicion-ubicacion">
@@ -178,33 +192,34 @@
                         </div>
                     </div>
 
+
+
+
                     <div class="contenedor2">
-
                         <h5 class="colorr">Fondo </h5>
-
                         <div class="contenedor-de-colores">
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif1.jpg" alt="arriba">
-                                <input  type="radio" name="fondo" value="1" checked>
+                                <img class="tamaño-img-posi" src="img/gif1.jpg">
+                                <input type="radio" name="fondo" value="1" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif2.jpg" alt="arriba">
+                                <img class="tamaño-img-posi" src="img/gif2.jpg">
                                 <input type="radio" name="fondo" value="2" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif3.jpg" alt="arriba">
+                                <img class="tamaño-img-posi" src="img/gif3.jpg">
                                 <input type="radio" name="fondo" value="3" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif4.jpg" alt="arriba">
+                                <img class="tamaño-img-posi" src="img/gif4.jpg">
                                 <input type="radio" name="fondo" value="4" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif5.jpg" alt="arriba">
+                                <img class="tamaño-img-posi" src="img/gif5.jpg">
                                 <input type="radio" name="fondo" value="5" checked>
                             </div>
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif6.jpg" alt="arriba">
+                                <img class="tamaño-img-posi" src="img/gif6.jpg">
                                 <input type="radio" name="fondo" value="6" checked>
                             </div>
 
