--- a/giftCard.html
+++ b/giftCard.html
@@ -45,7 +45,7 @@
             <li class="idem"><a href="index-Estetica.html" target="_blank">INICIO</a></li>
             <li class="idem"><a href="giftCard.html" target="_blank">GIFTCARD</a></li>
             <li class="idem"><a href="calendario.html" target="_blank">CALENDARIO</a></li>
-            <li class="idem"><a href="formulario.html" target="_blank">FORMULARIO</a></li>
+           
             <li class="idem"><a href="contacto.html" target="_blank">CONTACTO</a></li>
         </ul>
     </nav>
@@ -70,7 +70,11 @@
 
                 <div class="division2">
                     <p class="parrafo-final">VISTA PREVIA DE MI GIFCARD</p>
+                    <img class="axol" src="img/axolotl.gif" alt="">
+                    <p class="parrafo-final">YA CASI ES TUYA</p>
                 </div>
+
+
 
             </article>
 
@@ -86,7 +90,7 @@
 
 
                     <div class="contenedor2">
-                        <h4 class="colorr">Personalizacion de la GiftCard</h4>
+                        <h4 class="color-titulo">Personalizacion de la GiftCard</h4>
                         <!--nombre del destinatario-->
                         <div class="ppp">
                             <input type="text" id="nombre" name="nombre" placeholder="Nombre Del Destinatario...">
@@ -98,7 +102,7 @@
 
 
                     <div class="contenedor2">
-                        <h5 class="colorr">Color</h5>
+                        <h5 class="colorr">COLOR DEL TEXTO:</h5>
 
                         <div class="contenedor-de-colores">
                             <label for="colorfuente"></label>
@@ -141,7 +145,7 @@
 
 
                     <div class="contenedor2">
-                        <h5 class="colorr"> Tamaño de fuente </h5>
+                        <h5 class="colorr"> TAMAÑO DE LA FUENTE:</h5>
 
 
                         <div class="contenedor-de-tamaño">
@@ -180,7 +184,7 @@
 
 
                     <div class="contenedor2">
-                        <h5 class="colorr"> Monto $ </h5>
+                        <h5 class="colorr"> ¿CUAL ES EL MONTO EN PESOS?:  </h5>
 
                         <div class="monto-imput">
                             <label for="monto"></label>
@@ -193,7 +197,7 @@
 
 
                     <div class="contenedor2">
-                        <h5 class="colorr"> Ubicación </h5>
+                        <h5 class="colorr"> ¿DONDE QUIERES UBICAR EL MONTO?: </h5>
 
                         <div class="contenedor-posicion">
                             <label for="posi"></label>
@@ -221,43 +225,46 @@
 
                     <div class="contenedor2">
 
-                        <h5 class="colorr"> Fondo </h5>
+                        <h5 class="colorr"> ELIGE UN FONDO: </h5>
 
                         <div class="contenedor-de-colores">
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif1.jpg">
-                                <input type="radio" name="fondo" value="1" checked>
+                                <img class="tamaño-img-posi" src="img/gif1.jpg" >
+                                <input type="radio" name="fondo" value="1"  checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif2.jpg">
+                                <img class="tamaño-img-posi" src="img/gif2.jpg" >
                                 <input type="radio" name="fondo" value="2" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif3.jpg">
+                                <img class="tamaño-img-posi" src="img/gif3.jpg" >
                                 <input type="radio" name="fondo" value="3" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif4.jpg">
+                                <img class="tamaño-img-posi" src="img/gif4.jpg"  >
                                 <input type="radio" name="fondo" value="4" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif5.jpg">
+                                <img class="tamaño-img-posi" src="img/gif5.jpg"  >
                                 <input type="radio" name="fondo" value="5" checked>
                             </div>
 
                             <div class="columna-posicion-ubicacion">
-                                <img class="tamaño-img-posi" src="img/gif6.jpg">
+                                <img class="tamaño-img-posi" src="img/gif6.jpg"  >
                                 <input type="radio" name="fondo" value="6" checked>
                             </div>
 
 
                         </div>
                     </div>
+
+
+
 
                     <div class="boton-confirmar">
                         <input id="botones" type="submit" value="Confirmar">
